# NextMultitool

./: .gitignore  .gitmodules  Board-MHET-ESP32-DevKIT.cmake  CMakeLists.txt
src/: main.cpp  pins.hpp  ui.cpp.old  ui.h.old  web.cpp  web.hpp
src/web/: index.html  styles.css
